--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 * {
   padding: 0;
   margin: 0;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
 body {
@@ -21,7 +23,6 @@ header h1 {
 }
 
 header a {
-  text-decoration: none;
   color: #fce138;
 }
 
@@ -46,4 +47,27 @@ header h1 {
   color: #fce138;
   margin: 0;
   display: inline;
+}
+
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
+
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+
+footer div {
+  float: right;
+  line-height: 1.5;
+  text-align: right;
+}
+
+footer a {
+  color: #024e76;
 }
