--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
   color: #39a6b2;
 }
 
+/* .sticky {
+  position: fixed;
+} */
+
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
@@ -70,4 +74,30 @@ footer div {
 
 footer a {
   color: #024e76;
+}
+
+section {
+  padding: 60px;
+}
+
+/* Hero Style Start */
+.hero {
+  background-image: url('../images/hero-bg.jpg');
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+/* Hero Style End */
+
+/* Hero Form */
+.hero-form {
+  color: #024e76;
+  background-color: #fce138;
+  padding: 20px;
+  width: 500px;
+  border: solid 3px #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
 }
