--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,12 @@ body {
   color: #39a6b2;
 }
 
+.sticky {
+  position: fixed;
+  height: 100px;
+  margin: 0 auto;
+}
+
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
@@ -83,6 +89,7 @@ section {
   background-size: cover;
   background-position: center;
   position: relative;
+  top: 100px;
 }
 /* Hero Style End */
 
@@ -130,6 +137,7 @@ section {
 
 .intro {
   text-align: center;
+  top: 700px;
 }
 
 .intro p {
