--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,3 +232,44 @@ section {
   font-size: 17px;
   line-height: 1.3;
 }
+
+.contact {
+  background: #024e76;
+  text-align: center;
+}
+
+.contact h2 {
+  color: #fce138;
+}
+
+.contact a {
+  color: #fce138;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+  font-size: ;
+}
+
+.contact-info h3 {
+  color: #fce138;
+  margin-bottom: 10px;
+}
+
+.contact-info p {
+  margin-bottom: 10px;
+}
+
+span .mb-10 {
+  margin-bottom: 10px;
+}
