--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,29 @@ body {
   color: #39a6b2;
 }
 
+/* UTILITY STYLES */
+section {
+  padding: 60px;
+}
+
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
+/* HEADER STYLES */
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
@@ -48,7 +71,9 @@ header h1 {
   margin: 0;
   display: inline;
 }
+/* HEADER STYLES END */
 
+/* FOOTER STYLES */
 footer {
   background: #fce138;
   width: 100%;
@@ -71,10 +96,7 @@ footer div {
 footer a {
   color: #024e76;
 }
-
-section {
-  padding: 60px;
-}
+/* FOOTER STYLES END */
 
 /* Hero Style Start */
 .hero {
@@ -84,7 +106,6 @@ section {
   background-position: center;
   position: relative;
 }
-/* Hero Style End */
 
 /* Hero Form */
 .hero-form {
@@ -126,8 +147,9 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 }
-/* hero styles end */
+/* HERO STYLES END */
 
+/* WHAT WE DO STYLES */
 .intro {
   text-align: center;
 }
@@ -139,27 +161,12 @@ section {
   font-size: 20px;
   margin: 0 auto;
 }
+/* WHAT WE DO STYLES END */
 
+/* WHAT YOU DO STYLES */
 .steps {
   text-align: center;
   background: #fce138;
-}
-
-.section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
-}
-
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
 }
 
 .steps div {
@@ -185,7 +192,9 @@ section {
 .steps span {
   font-size: 38px;
 }
+/* WHAT YOU DO STYLES END */
 
+/* TRAINER STYLES */
 .trainers {
   text-align: center;
 }
@@ -232,17 +241,15 @@ section {
   font-size: 17px;
   line-height: 1.3;
 }
+/* TRAINER STYLES END */
 
+/* REACH OUT STYLES */
 .contact {
   background: #024e76;
   text-align: center;
 }
 
 .contact h2 {
-  color: #fce138;
-}
-
-.contact a {
   color: #fce138;
 }
 
@@ -258,18 +265,22 @@ section {
   text-align: left;
   margin: 30px 0 0 60px;
   color: white;
-  font-size: ;
 }
 
 .contact-info h3 {
   color: #fce138;
-  margin-bottom: 10px;
+  font-size: 32px;
 }
 
-.contact-info p {
-  margin-bottom: 10px;
+.contact-info p,
+.contact-info address {
+  margin-bottom: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
 }
 
-span .mb-10 {
-  margin-bottom: 10px;
+.contact a {
+  color: #fce138;
 }
+/* REACH OUT STYLES END */
