--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ footer a {
 
 /* Hero Style Start */
 .hero {
-  background-image: url('../images/hero-bg.jpg');
+  background-image: url('../images/hero-image.jpg');
   height: 600px;
   background-size: cover;
   background-position: center;
