--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,9 @@ section {
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
@@ -50,7 +53,6 @@ header a {
 }
 
 header nav {
-  float: right;
   margin: 7px 0;
 }
 
