--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,15 @@ section {
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+}
+
+.flex-row {
+  display: flex;
 }
 
 .primary-border {
@@ -172,11 +177,8 @@ footer a {
 /* HERO STYLES END */
 
 /* WHAT WE DO STYLES */
-.intro {
-  text-align: center;
-}
-
 .intro p {
+  text-align: center;
   line-height: 1.7;
   color: #39a6b2;
   width: 80%;
@@ -187,7 +189,6 @@ footer a {
 
 /* WHAT YOU DO STYLES */
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -218,7 +219,6 @@ footer a {
 
 /* TRAINER STYLES */
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -268,7 +268,6 @@ footer a {
 /* REACH OUT STYLES */
 .contact {
   background: #024e76;
-  text-align: center;
 }
 
 .contact h2 {
