--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ section {
 }
 
 .section-title {
-  font-size: 55px;
+  font-size: 48px;
   color: #024e76;
   border-bottom: 3px solid;
   padding-bottom: 20px;
@@ -70,7 +70,7 @@ header nav ul {
 }
 
 header nav ul li a {
-  margin: 0 30px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.5vw;
 }
@@ -118,6 +118,7 @@ footer a {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 /* Hero CTA */
@@ -127,7 +128,7 @@ footer a {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h1 {
@@ -360,3 +361,25 @@ footer a {
   font-size: 16px;
 }
 /* REACH OUT STYLES END */
+
+/* Media Queries */
+/* Media Query for smaller desktop screens and smaller */
+@media screen and (max-width: 980px) {
+   {
+    /* this will be applied on any screen smaller than 980px */
+  }
+}
+
+/* Media Query for tablets and smaller */
+@media screen and (max-width: 768px) {
+   {
+    /* this will be applied on any screen between 768px and 575px */
+  }
+}
+
+/* Media Query for mobile phones and smaller */
+@media screen and (max-width: 575px) {
+   {
+    /* this will be applied on any screen smaller than 980px */
+  }
+}
